fix titles, star alignment

--- a/src/app/Lab-operations/lab-detail/lab-detail.component.css
+++ b/src/app/Lab-operations/lab-detail/lab-detail.component.css
@@ -51,13 +51,20 @@
   
  
   .description-ex {
-    display: flex;
+    position: absolute;
+    top: 0;
+    right: 0;
+    justify-content: end;
     align-items: center;
+    height: 100%;
+    padding-right: 1rem;
+    padding-top: 1em;
   }
   
-  .description-ex img {
-    margin-right: 4px;
-  }
+
   
+  .title {
+    padding-top: 0.8em;
+  }
 
   
